--- a/incron.conf
+++ b/incron.conf
@@ -1,1 +1,1 @@
-/home/boxe/.boxe/nginx IN_MODIFY,IN_DELETE,IN_NO_LOOP /bin/systemctl reload nginx
+/home/boxie/.boxie/nginx IN_MODIFY,IN_DELETE,IN_NO_LOOP /bin/systemctl reload nginx
