Added some checks

--- a/boxie.yml
+++ b/boxie.yml
@@ -1,26 +1,26 @@
-# Boxie Configuration (https://mardix.github.io/boxie)
-# Boxie is tool to deploy multiple sites and app on a single server
----
+# ~ Boxie ~
 # boxie.yml
-
 # Boxie Configuration (https://mardix.github.io/boxie)
-# Boxie is tool to deploy multiple sites and app on a single server
+#
 ---
-  
-# name: a name for the application
+
+# Name of the package (not used by Boxie)
 name: 
 
-# description of what it is
+# description of the package (not used by Boxie)
 description:
 
-# version if necessary
+# version if necessary (not used by Boxie)
 version:
 
-#(*required) List of all application to run 
+# *required: list/array of all applications to run 
 apps:
   - 
-    # domain_name (string): the server name without http
-    domain_name: 
+    # *required - the name of the application
+    name: 
+
+    # the server name without http, will be used with process["web"]
+    server_name: 
 
     # runtime: python|node|static|shell
     # python for wsgi application (default python)
@@ -59,6 +59,7 @@ apps:
     uwsgi:
       gevent: false
       asyncio: false
+
     # env (object) custom environment variable
     env: 
       KEY: VALUE
@@ -69,18 +70,17 @@ apps:
 
       # release (array): commands to execute each time the application is released/pushed
       release: 
-        -
+
       # destroy (array): commands to execute when the application is being deleted
       destroy: 
-        - 
+
       # predeploy (array): commands to execute before spinning the app
-      predeploy: 
-        - 
+      predeploy:
+
       # postdeploy (array): commands to execute after spinning the app
       postdeploy: 
-        - 
 
-    # *process (required) list of all processes to run. 
+    # *required - process - list of all processes to run. 
     # 'web' is special, it’s the only process type that can receive external HTTP traffic  
     # all other process name will be regular worker. 
     # The name doesn't matter 
