--- a/examples/node/boxie.yml
+++ b/examples/node/boxie.yml
@@ -1,8 +1,13 @@
 # Boxie (https://mardix.github.io/boxie)
 ---
-- domain_name: yourdomain.com
-  runtime: node
-  auto_restart: true
-  apps:
-    web: node app.js 2>&1 | cat
+name: 
+description:
+version:
+apps:
+  - name: yourdomain.com
+    server_name: yourdomain.com
+    runtime: node
+    auto_restart: true
+    process:
+      web: node app.js 2>&1 | cat
 
