--- a/examples/python/boxie.yml
+++ b/examples/python/boxie.yml
@@ -1,12 +1,16 @@
 # Boxie (https://mardix.github.io/boxie)
 ---
-- domain_name: yourdomain.com
-  runtime: python
-  auto_restart: true
-  env:
-    ENV_KEY: ENV_VAL
-    ENV_KEY2: ENV_VAL2
-  apps:
-    web: app:app
-
+name: 
+description:
+version:
+apps:
+  - name: yourdomain.com
+    server_name: yourdomain.com
+    runtime: python
+    auto_restart: true
+    env:
+      ENV_KEY: ENV_VAL
+      ENV_KEY2: ENV_VAL2
+    process:
+      web: app:app
 
