Rebranding Boxie to Polybox. Remove Python 2 support

--- a/nginx.conf
+++ b/nginx.conf
@@ -4,7 +4,7 @@ server {
 
 	root /var/www/html;
 
-	index index.html index.htm;
+	index index.html index.htm index.polybox.html index.nginx-debian.html;
 
 	server_name _;
 
@@ -12,4 +12,4 @@ server {
 		try_files $uri $uri/ =404;
 	}
 }
-include /home/boxie/.boxie/nginx/*.conf;
+include /home/polybox/.polybox/nginx/*.conf;
