--- a/examples/python/polybox.yml
+++ b/examples/python/polybox.yml
@@ -5,12 +5,14 @@ description:
 version:
 apps:
   - name: yourdomain.com
-    server_name: yourdomain.com
     runtime: python
     auto_restart: true
     env:
       ENV_KEY: ENV_VAL
       ENV_KEY2: ENV_VAL2
     process:
-      web: app:app
+      web: 
+        cmd: app:app
+        server_name: yourdomain.com
+        workers: 2
 
