Rebranding to Miko

--- a/incron.conf
+++ b/incron.conf
@@ -1,1 +1,1 @@
-/home/polybox/.polybox/nginx IN_MODIFY,IN_DELETE,IN_NO_LOOP /bin/systemctl reload nginx
+/home/miko/.miko/nginx IN_MODIFY,IN_DELETE,IN_NO_LOOP /bin/systemctl reload nginx
