--- a/miko.yml
+++ b/miko.yml
@@ -1,7 +1,7 @@
 
-# ~ Polybox ~
-# polybox.yml
-# Polybox Configuration (https://mardix.github.io/polybox)
+# ~ Miko ~
+# miko.yml
+# Miko Configuration (https://mardix.github.io/miko)
 #
 ---
 
