--- a/sailor.yml
+++ b/sailor.yml
@@ -1,7 +1,7 @@
 
-# ~ Miko ~
-# miko.yml
-# Miko Configuration (https://mardix.github.io/miko)
+# ~ Sailor ~
+# sailor.yml
+# Sailor Configuration (https://mardix.github.io/sailor)
 #
 ---
 
