--- a/incron.conf
+++ b/incron.conf
@@ -1,1 +1,1 @@
-/home/miko/.miko/nginx IN_MODIFY,IN_DELETE,IN_NO_LOOP /bin/systemctl reload nginx
+/home/sailor/.sailor/nginx IN_MODIFY,IN_DELETE,IN_NO_LOOP /bin/systemctl reload nginx
