--- a/nginx.conf
+++ b/nginx.conf
@@ -4,7 +4,7 @@ server {
 
 	root /var/www/html;
 
-	index index.html index.htm index.miko.html index.nginx-debian.html;
+	index index.html index.htm index.sailor.html index.nginx-debian.html;
 
 	server_name _;
 
@@ -12,4 +12,4 @@ server {
 		try_files $uri $uri/ =404;
 	}
 }
-include /home/miko/.miko/nginx/*.conf;
+include /home/sailor/.sailor/nginx/*.conf;
