--- a/examples/monorepo/package.json
+++ b/examples/monorepo/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node",
   "version": "1.0.0",
-  "description": "This is a Polybox **node** example",
+  "description": "This is a Sailor **node** example",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
